Trying to fix valign again

--- a/files/styles.css
+++ b/files/styles.css
@@ -1,19 +1,18 @@
 body {
+    align-items: center;
+    background-color: #000000;
     background-image: url('../image/laptop.jpg'); 
-    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    font-family: 'Courier New', monospace;
-    background-color: #000000;
+    background-size: cover;
     color: #00ff00;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
     flex-direction: column; 
+    font-family: 'Courier New', monospace;
     height: 100vh;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
 }
 
 a:link {
@@ -45,7 +44,7 @@ main {
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.8);
     max-width: 720px;
-    width: 100%;
+    width: 720px;
 }
 
 footer {
@@ -120,14 +119,13 @@ footer {
 }
 
 /* Media query for smaller screens */
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
     body {
+        align-items: center;
         max-width: 90%;
         justify-content: center;
-        align-items: flex-start;
-        align-items: center;
     }
-    
+ 
     /* Vertical tabs for smaller screens */
     .tabs {
         flex-direction: row; 
